# hstransformer

./: .ghc.environment.x86_64-mingw32-8.6.5  .gitignore  LICENSE  Main.hs  MyPrelude.hs  brittany.yaml  transformer.cabal
