name:                transformer
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable transformer
  main-is:             Main.hs
  other-modules:
      MyPrelude
  hs-source-dirs:
      .
  build-depends:       
    base>=4.12.0.0,
    aeson -any,
    Glob -any,
    unordered-containers -any,
    text -any,
    vector -any
  default-language:    Haskell2010
  default-extensions:
    OverloadedStrings
