cabal-version: >=1.10
name: transformer
version: 0.1.0.0
license: BSD3
license-file: LICENSE
build-type: Simple
extra-source-files:
    ChangeLog.md

executable transformer
    main-is: Main.hs
    hs-source-dirs: .
    other-modules:
        MyPrelude
    default-language: Haskell2010
    default-extensions: 
        OverloadedStrings,
        DeriveDataTypeable
    build-depends:
        base >=4.12.0.0,
        aeson -any,
        Glob -any,
        unordered-containers -any,
        text -any,
        vector -any,
        cmdargs -any
